# pg_ffmpeg

./: .gitignore  Cargo.toml  Dockerfile  MILESTONE_1_REVIEW.md  PLAN.md  README.md  clippy.toml  pg_ffmpeg.control
.claude/: settings.json
.github/: dependabot.yml
.github/actions/setup-pgrx/: action.yml
.github/workflows/: bench.yml  build.yml  debian-package.yml  docker-publish.yml  rust-clippy.yml  test.yml
docs/: MILESTONE_2_REVIEW.md  PAGER_PLAN.md  PLAN.md
pager/: Cargo.toml  README.md
pager/src/: config.rs  encode.rs  layout.rs  main.rs  scan.rs  term.rs
plans/: simplify-extract-frames.md
src/: animation.rs  codec_lookup.rs  concat.rs  encode.rs  extract_audio.rs  extract_frames.rs  filter_complex.rs  filter_safety.rs  frame_encoder.rs  gif.rs  hls.rs  hwaccel.rs  lib.rs  limits.rs  media_info.rs  mem_io.rs  overlay.rs  pipeline.rs  subtitles.rs  test_utils.rs  thumbnail.rs  transcode.rs  trim.rs  waveform.rs
