[package]
name = "pg_ffmpeg"
version = "0.1.10"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_ffmpeg"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = ["tempfile"]
pg_bench = ["tempfile", "pgrx-bench"]

[dependencies]
pgrx = { git = "https://github.com/pgcentralfoundation/pgrx.git" }
pgrx-bench = { git = "https://github.com/pgcentralfoundation/pgrx.git", optional = true }
ffmpeg-next = "8"
tempfile = { version = "3", optional = true }
serde_json = "1"

[dev-dependencies]
pgrx-tests = { git = "https://github.com/pgcentralfoundation/pgrx.git" }
tempfile = "3"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
