[package]
name = "pg_ffmpeg"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = ["tempfile"]
pg_bench = ["tempfile", "dep:pgrx-bench"]
# Compile-time flag that enables tests requiring a real GPU-backed
# hardware encoder. Default `cargo pgrx test` runs never exercise HW
# encoders (only the software-fallback path); the HW tests run in a
# separate CI job on a self-hosted GPU runner.
hwaccel_tests = []

[dependencies]
ffmpeg-next = "8"
pgrx = { git = "https://github.com/pgcentralfoundation/pgrx.git", tag = "v0.18.0" }
pgrx-bench = { git = "https://github.com/pgcentralfoundation/pgrx.git", tag = "v0.18.0", optional = true }
serde_json = "1"
tempfile = { version = "3", optional = true }

[dev-dependencies]
pgrx-tests = { git = "https://github.com/pgcentralfoundation/pgrx.git", tag = "v0.18.0" }
tempfile = "3"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
